examples/test/testpolicy15261.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15261
  namespace: namespace445
spec:
  podSelector:
    matchLabels:
      key47: value37
      key31: value5
      key26: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value28
      podSelector:
        matchLabels:
          key10: value11
          key22: value45
          key35: value0
